Add minimalistic client to interact with API

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,3 @@
-.bucketlist {
-  margin-top: 5px;
-  margin-bottom: 5px
-}
-.cardtitle, .cardfooter {
-  text-align: center
-}
-.cardlink, .checkbox {
-  color: gray;
+.spinner  {
   text-align: center
 }
