--- a/client/src/components/bucketlist/style.css
+++ b/client/src/components/bucketlist/style.css
@@ -7,3 +7,11 @@
 .delete-bucketlist:hover {
     color: red;
 }
+.bucketlist {
+    margin-top: 5px;
+    margin-bottom: 5px
+  }
+  .cardtitle, .cardfooter {
+    text-align: center
+  }
+  
